compiler/tests/fixtures/compile_errors/non_bool_and.fe
contract Foo:
    pub def bar(x: bool, y: u256) -> bool:
        return x and y